update for learning

--- a/index.html
+++ b/index.html
@@ -17,8 +17,29 @@
         <li>项目源码</li>
         <li>前端框架</li>
         <li>Node.Js</li>
-        <li>布局练习</li>
-        <li>JavaScript练习</li>
+        <li>
+            <div>
+                <h2>HTML/CSS练习</h2>
+                <ul>
+                    <li><a href="http://zhendongwang.com/ife_Spring">ife-spring</a></li>
+                    <li><a href="slides/00">选项卡</a></li>
+                    <li><a href="slides/01">轮播图</a></li>
+                    <li><a href="slides/04">好声音</a></li>
+                    <li><a href="slides/07">css三角</a></li>
+                    <li><a href="slides/08">布局</a></li>
+                    <li><a href="slides/10">网易云音乐TopBar</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <div>
+                <h2>JavaScript练习</h2>
+                <ul>
+                    <li><a href="slides/02">弹出层</a></li>
+                    <li><a href="slides/05">输入处理</a></li>
+                </ul>
+            </div>
+        </li>
     </ul>
 </div>
 </body>
