--- a/slides/08/index.html
+++ b/slides/08/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>布局相关</title>
+    <style>
+        body {
+            min-width: 960px;
+        }
+    </style>
 </head>
 <body>
 <h1>布局总结</h1>
