update for learning

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
     <h2>Web Front-End Designer & Developer</h2>
 
-    <p><a href="">GitHub</a></p>
+    <p><a href="https://github.com/zD98/">GitHub</a></p>
 
-    <p><a href="">Slides</a></p>
+    <p><a href="/slides">Slides</a></p>
 
     <p><a href="">CV</a></p>
 
