--- a/slides/100/index.html
+++ b/slides/100/index.html
@@ -5,11 +5,48 @@
     <link href="css/main.css" rel="stylesheet">
     <script src="../jquery/jquery-2.1.4.js" type="text/javascript"></script>
     <title></title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        .button {
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            background: #000000;
+            border-radius: 50px;
+            color: #fff;
+            line-height: 100px;
+        }
+
+        #test {
+            position: relative;
+            top: 100px;
+            width: 500px;
+            height: 0;
+            background-color: #111;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-<div class="box">
+<div class="button">点我</div>
+<div id="test">
+
+    <ul>
+        <li><a href="#">Code</a></li>
+        <li><a href="#">Photo</a></li>
+        <li><a href="#">Cv</a></li>
+        <li><a href="#">Github</a></li>
+    </ul>
 </div>
 <script>
+
+    $('.button').click(function () {
+        $('#test').animate({height: "92px", top: "54px"});
+    });
 </script>
 </body>
 </html>
