--- a/slides/107/index.html
+++ b/slides/107/index.html
@@ -1,51 +1,352 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <style>
-        #drag1 {
-            width: 300px;
-            height: 300px;
-            background-color: #4183C4;
+    <title>DrapAndDrop</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <style type="text/css">
+        /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
+        /* Author: Nicolas Hery - http://nicolashery.com */
+        /* Version: b13fe65ca28d2e568c6ed5d7f06581183df8f2ff */
+        /* Source: https://github.com/nicolahery/markdownpad-github */
+
+        /* RESET
+        =============================================================================*/
+
+        html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+            margin: 0;
+            padding: 0;
+            border: 0;
         }
 
-        #drag2 {
-            width: 300px;
-            height: 300px;
-            background-color: #ff3333;
+        /* BODY
+        =============================================================================*/
+
+        body {
+            font-family: Helvetica, arial, freesans, clean, sans-serif;
+            font-size: 14px;
+            line-height: 1.6;
+            color: #333;
+            background-color: #fff;
+            padding: 20px;
+            max-width: 960px;
+            margin: 0 auto;
         }
 
-        .dd-item {
-            position: absolute;
+        body > *:first-child {
+            margin-top: 0 !important;
+        }
+
+        body > *:last-child {
+            margin-bottom: 0 !important;
+        }
+
+        /* BLOCKS
+        =============================================================================*/
+
+        p, blockquote, ul, ol, dl, table, pre {
+            margin: 15px 0;
+        }
+
+        /* HEADERS
+        =============================================================================*/
+
+        h1, h2, h3, h4, h5, h6 {
+            margin: 20px 0 10px;
+            padding: 0;
+            font-weight: bold;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        h1 tt, h1 code, h2 tt, h2 code, h3 tt, h3 code, h4 tt, h4 code, h5 tt, h5 code, h6 tt, h6 code {
+            font-size: inherit;
+        }
+
+        h1 {
+            font-size: 28px;
+            color: #000;
+        }
+
+        h2 {
+            font-size: 24px;
+            border-bottom: 1px solid #ccc;
+            color: #000;
+        }
+
+        h3 {
+            font-size: 18px;
+        }
+
+        h4 {
+            font-size: 16px;
+        }
+
+        h5 {
+            font-size: 14px;
+        }
+
+        h6 {
+            color: #777;
+            font-size: 14px;
+        }
+
+        body > h2:first-child, body > h1:first-child, body > h1:first-child + h2, body > h3:first-child, body > h4:first-child, body > h5:first-child, body > h6:first-child {
+            margin-top: 0;
+            padding-top: 0;
+        }
+
+        a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h5, a:first-child h6 {
+            margin-top: 0;
+            padding-top: 0;
+        }
+
+        h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p {
+            margin-top: 10px;
+        }
+
+        /* LINKS
+        =============================================================================*/
+
+        a {
+            color: #4183C4;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* LISTS
+        =============================================================================*/
+
+        ul, ol {
+            padding-left: 30px;
+        }
+
+        ul li > :first-child,
+        ol li > :first-child,
+        ul li ul:first-of-type,
+        ol li ol:first-of-type,
+        ul li ol:first-of-type,
+        ol li ul:first-of-type {
+            margin-top: 0px;
+        }
+
+        ul ul, ul ol, ol ol, ol ul {
+            margin-bottom: 0;
+        }
+
+        dl {
+            padding: 0;
+        }
+
+        dl dt {
+            font-size: 14px;
+            font-weight: bold;
+            font-style: italic;
+            padding: 0;
+            margin: 15px 0 5px;
+        }
+
+        dl dt:first-child {
+            padding: 0;
+        }
+
+        dl dt > :first-child {
+            margin-top: 0px;
+        }
+
+        dl dt > :last-child {
+            margin-bottom: 0px;
+        }
+
+        dl dd {
+            margin: 0 0 15px;
+            padding: 0 15px;
+        }
+
+        dl dd > :first-child {
+            margin-top: 0px;
+        }
+
+        dl dd > :last-child {
+            margin-bottom: 0px;
+        }
+
+        /* CODE
+        =============================================================================*/
+
+        pre, code, tt {
+            font-size: 12px;
+            font-family: Consolas, "Liberation Mono", Courier, monospace;
+        }
+
+        code, tt {
+            margin: 0 0px;
+            padding: 0px 0px;
+            white-space: nowrap;
+            border: 1px solid #eaeaea;
+            background-color: #f8f8f8;
+            border-radius: 3px;
+        }
+
+        pre > code {
+            margin: 0;
+            padding: 0;
+            white-space: pre;
+            border: none;
+            background: transparent;
+        }
+
+        pre {
+            background-color: #f8f8f8;
+            border: 1px solid #ccc;
+            font-size: 13px;
+            line-height: 19px;
+            overflow: auto;
+            padding: 6px 10px;
+            border-radius: 3px;
+        }
+
+        pre code, pre tt {
+            background-color: transparent;
+            border: none;
+        }
+
+        kbd {
+            -moz-border-bottom-colors: none;
+            -moz-border-left-colors: none;
+            -moz-border-right-colors: none;
+            -moz-border-top-colors: none;
+            background-color: #DDDDDD;
+            background-image: linear-gradient(#F1F1F1, #DDDDDD);
+            background-repeat: repeat-x;
+            border-color: #DDDDDD #CCCCCC #CCCCCC #DDDDDD;
+            border-image: none;
+            border-radius: 2px 2px 2px 2px;
+            border-style: solid;
+            border-width: 1px;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            line-height: 10px;
+            padding: 1px 4px;
+        }
+
+        /* QUOTES
+        =============================================================================*/
+
+        blockquote {
+            border-left: 4px solid #DDD;
+            padding: 0 15px;
+            color: #777;
+        }
+
+        blockquote > :first-child {
+            margin-top: 0px;
+        }
+
+        blockquote > :last-child {
+            margin-bottom: 0px;
+        }
+
+        /* HORIZONTAL RULES
+        =============================================================================*/
+
+        hr {
+            clear: both;
+            margin: 15px 0;
+            height: 0px;
+            overflow: hidden;
+            border: none;
+            background: transparent;
+            border-bottom: 4px solid #ddd;
+            padding: 0;
+        }
+
+        /* TABLES
+        =============================================================================*/
+
+        table th {
+            font-weight: bold;
+        }
+
+        table th, table td {
+            border: 1px solid #ccc;
+            padding: 6px 13px;
+        }
+
+        table tr {
+            border-top: 1px solid #ccc;
+            background-color: #fff;
+        }
+
+        table tr:nth-child(2n) {
+            background-color: #f8f8f8;
+        }
+
+        /* IMAGES
+        =============================================================================*/
+
+        img {
+            max-width: 100%
         }
     </style>
-    <script src="js/util/EventUtil.js"></script>
-    <script src="js/dd/dd-manager.js"></script>
-    <script src="js/dd/dd-container.js"></script>
-    <script src="js/dd/dd-item.js"></script>
 </head>
 <body>
-<div id="drag1">
-    <div id="dd-item">DRAG</div>
-</div>
-<div id="drag2">
-    <!--<div class=""></div>-->
-</div>
-<script>
+<h1>JS拖拽总结</h1>
+<hr/>
+<p>被面试问到了拖拽原理... 我光荣的忘了... 特此写下总结</p>
+<ol>
+    <li>
+        <p>拖拽初级</p>
+<pre><code>- 事件mousedown, mousemove, moveup
+    - 监听拖拽元素的mousedown事件
+    - 在mousedown事件下 添加mousemove, mouveup 的事件处理
+    - 技能：get 事件的处理 拖拽原理
+    - 缺点:每个元素都需要添加事件, 比较繁琐, 不易拓展, 不易团队使用
+</code></pre>
 
-    var drag1 = document.getElementById('drag1');
-    var drag2 = document.getElementById('drag2');
+    </li>
+    <li>
+        <p>拖拽进阶 第一版(来自于JS高级程序设计)</p>
+<pre><code>- 添加了事件委托, 将mousedown, mouseup, moumove 等事件添加到了document上
+    - 原理：通过event.target获取触发事件的元素, 进行判断触发mousedown是否是可拖拽元素
+    - mousemove, mouseup 判断是否有dragging
+    - 事件添加到document or body 是因为mousemove的时候会出现bug
+    - 写了container与item的类 所有的container共享一个dragging(活动拖拽),
+    然后根据left,top,等判断进入哪个容器
+    - get JS事件 事件委托 闭包 类
+    - 缺点:虽然简化了事件的部分, 拖拽没有container的限制 会随意乱拽 代码耦合太深 无法
+    相互关联太多
+    依然没有什么可用性, 更像是知识点学习...
+</code></pre>
 
-    var container1 = new DDContainer();
-    container1.start(drag1);
+    </li>
+    <li>
+        <p>拖拽进阶 第二版 (来自于jQuery源码)</p>
+<pre><code>- 添加了manager的类 将container与item 解耦和
+    - 在manager中负责添加与控制拖拽事件,以及发生拖拽事件时通知响应container与item
+    - container负责容器的处理,属性储存, item 未知
+    - get：设计模式
+    - 缺点:没有彻底的解耦和 关于item的部分 并没有做什么 将dom的控制都扔给了manager
+    manager 和 item没有解耦
+</code></pre>
 
-    var container2 = new DDContainer();
-    container2.start(drag2);
+    </li>
+    <li>
+        <p>拖拽进阶 未完成版
+        </p>
+<pre><code>- 将css 的变化 添加到类中 好吧 是我之前太懒了
+    - 解耦 container 负责实现添加item 移入移出等 样式变化
+    item负责 实现 拖拽时的样式变化 等
+    - manager 只是负责拖拽的逻辑处理
+    - 消息传递的话 应该用topic(观察者模式)吧 jquery 用的是互相的函数调用 但我觉得这样函数调用不ok啊
+    - 写一个helper 就是拖拽移动的那个元素
+    - 看看能不能在angular上再写一个 唔先这样
+</code></pre>
 
-    var item = document.getElementById('dd-item');
-    var dditem = new DDItem();
-    dditem.start(item);
-</script>
+    </li>
+</ol>
+<p>当前 <a href="http://zd98.github.io/slides/106/ex.html">拖拽样例</a></p>
+
 </body>
 </html>
+<!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
