update for learning

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <p><a href="/slides">Slides</a></p>
 
-    <p><a href="">CV</a></p>
+    <p><a href="/cv">CV</a></p>
 
     <p><a href="">Email</a></p>
 </div>
