--- a/slides/107/index.html
+++ b/slides/107/index.html
@@ -345,7 +345,7 @@
 
     </li>
 </ol>
-<p>当前 <a href="http://zd98.github.io/slides/106/ex.html">拖拽样例</a></p>
+<p>当前 <a href="http://zd98.github.io/slides/106/example.html">拖拽样例</a></p>
 
 </body>
 </html>
