--- a/slides/index.html
+++ b/slides/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        body {
+            background: #fff;
+            font-size: 10px;
+        }
+    </style>
 </head>
 <body>
-Slides
+<h2>Slides</h2>
+<div>
+</div>
 </body>
 </html>
