update for learning

--- a/cv/index.html
+++ b/cv/index.html
@@ -320,7 +320,7 @@
   - 开发校园级问答社区TresBien,
   负责前段的设计与逻辑实现
 
-  -不断学习前段其他技术, ES6, React等
+  -不断学习前端其他技术, ES6, React等
 </code></pre>
 
 <h3>教育经历</h3>
