--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@
     /* RESET
     =============================================================================*/
 
-    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {
       margin: 0;
       padding: 0;
       border: 0;
@@ -293,19 +293,21 @@
 <body>
 <h2>王振东</h2>
 <h3>求职意向</h3>
-<pre><code>热爱前段技术, 渴望优秀设计开发理念的氛围
+<pre><code> 热爱前段技术, 渴望优秀设计开发理念的氛围
   欲求 Web 前端职位
 </code></pre>
 
 <h3>专业技能</h3>
-<pre><code>- 语言: JavaScript, HTML/CSS, C/C++, Java
+<pre>
+  <code>- 语言: JavaScript, HTML/CSS, C/C++, Java
   - 框架: jQuery, AngularJS, Dojo, Bootstrap
   - 其他: Node.JS, WebGL, OpenGL, Unity
   - 工具: Git, PS
 </code></pre>
 
 <h3>项目经验</h3>
-<pre><code>- 2015.3 - 2015.7
+<pre>
+  <code>- 2015.3 - 2015.7
   - 利用cocos2d 开发了一款跑酷游戏 MachoRun, 该游戏为队友优秀毕设,
   我负责游戏逻辑开发部分, 完成关卡选择, 人物选择, 游戏界面逻辑实现等
 
@@ -324,11 +326,11 @@
 </code></pre>
 
 <h3>教育经历</h3>
-<pre><code>就读于 大连理工大学 软件工程 数字媒体技术方向 大三学生
+<pre><code> 就读于 大连理工大学 软件工程 数字媒体技术方向 大三学生
 </code></pre>
 
 <h3>自我介绍</h3>
-<pre><code>人的成就感来源于两样东西，创造和毁灭。
+<pre><code> 人的成就感来源于两样东西，创造和毁灭。
   我喜欢编程给我带来的成就感。
 </code></pre>
 
