--- a/cv/index.html
+++ b/cv/index.html
@@ -293,7 +293,7 @@
 <body>
 <h2>王振东</h2>
 <h3>求职意向</h3>
-<pre><code> 热爱前段技术, 渴望优秀设计开发理念的氛围
+<pre><code>&nbsp;&nbsp;热爱前段技术, 渴望优秀设计开发理念的氛围
   欲求 Web 前端职位
 </code></pre>
 
@@ -308,21 +308,21 @@
 <h3>项目经验</h3>
 <pre>
   <code>- 2015.3 - 2015.7
-  - 利用cocos2d 开发了一款跑酷游戏 MachoRun, 该游戏为队友优秀毕设,
-    我负责游戏逻辑开发部分, 完成关卡选择, 人物选择, 游戏界面逻辑实现等
+    &nbsp;&nbsp;- 利用cocos2d 开发了一款跑酷游戏 MachoRun, 该游戏为队友优秀毕设,
+    &nbsp;&nbsp;&nbsp;&nbsp;我负责游戏逻辑开发部分, 完成关卡选择, 人物选择, 游戏界面逻辑实现等
 
   - 2015.7 - 2015.12
-  - 在老师研究室工作, 负责网站部分组件开发,
-    基于Dojo实现了列表内元素拖拽顺序改变及ArcGis图层改变
+    &nbsp;&nbsp;- 在老师研究室工作, 负责网站部分组件开发,
+    &nbsp;&nbsp;&nbsp;&nbsp;基于Dojo实现了列表内元素拖拽顺序改变及ArcGis图层改变
 
-  - 使用AngularJS 与 NodeJS 开发某影院远程操作系统,
-    负责前后端开发, 以及NodeJS与C++部分通信工作
+    &nbsp;&nbsp;- 使用AngularJS 与 NodeJS 开发某影院远程操作系统,
+    &nbsp;&nbsp;&nbsp;&nbsp;负责前后端开发, 以及NodeJS与C++部分通信工作
 
   - 2016.1 - 现在
-  - 开发校园级问答社区TresBien,
-    负责前段的设计与逻辑实现
+    &nbsp;&nbsp;- 开发校园级问答社区TresBien,
+    &nbsp;&nbsp;&nbsp;&nbsp;负责前段的设计与逻辑实现
 
-    - 不断学习前端其他技术, ES6, React等
+    &nbsp;&nbsp;- 不断学习前端其他技术, ES6, React等
 </code></pre>
 
 <h3>教育经历</h3>
@@ -330,7 +330,7 @@
 </code></pre>
 
 <h3>自我介绍</h3>
-<pre><code> 人的成就感来源于两样东西，创造和毁灭。
+<pre><code>&nbsp;&nbsp;人的成就感来源于两样东西，创造和毁灭。
   我喜欢编程给我带来的成就感。
 </code></pre>
 
