update for learning

--- a/slides/index.html
+++ b/slides/index.html
@@ -8,10 +8,18 @@
             background: #fff;
             font-size: 10px;
         }
+        a,a:link,a:visited{
+            color: blue;
+            text-decoration: none;
+        }
+        a:hover{
+            text-decoration: underline ;
+        }
     </style>
 </head>
 <body>
 <h2>Slides 还在更新中~~</h2>
+<h2>JS设计模式总结 - <a href="https://gist.github.com/zD98">在这在这</a></h2>
 <div>
 </div>
 </body>
