update for learning

--- a/slides/index.html
+++ b/slides/index.html
@@ -31,11 +31,41 @@
         h2{
             line-height: 26px;
         }
+        ul{
+            display: none;
+            list-style: none;
+        }
+        ul li{
+            text-align: left;
+        }
     </style>
 </head>
 <body>
 <div class="wrap">
     <h2>Slides 还在更新中~~</h2>
+    <div>
+        <h2>HTML/CSS/JS基础</h2>
+        <ul>
+            <li><a href="/slides/00">轮播图-1</a></li>
+            <li><a href="/slides/01">轮播图-2</a></li>
+            <li><a href="/slides/04">轮播图-3</a></li>
+            <li><a href="/slides/02">登陆Modal</a></li>
+            <li><a href="/slides/08">三列布局系列</a></li>
+            <li><a href="/slides/10">网易云音乐Header</a></li>
+            <li><a href="/slides/11">**Promise练习</a></li>
+            <li><a href="/slides/12">css居中练习</a></li>
+            <li><a href="/slides/101">css悬浮特效</a></li>
+            <li><a href="/slides/102">css基线</a></li>
+            <li><a href="/slides/103">css镂空背景</a></li>
+            <li><a href="/slides/104">JS事件总结</a></li>
+            <li><a href="/slides/105">**JS函数及原型</a></li>
+            <li><a href="/">**HTML5拖拽API</a></li>
+            <li><a href="/slides/106">JS拖拽基础</a></li>
+            <li><a href="/slides/107">JS拖拽总结</a></li>
+            <li><a href="/slides/110">SVG练习</a></li>
+            <li><a href="/slides/201">input格式校验</a></li>
+        </ul>
+    </div>
     <h2>JS设计模式总结 - <a href="https://gist.github.com/zD98">在这在这</a></h2>
     <h2>WebGL Shaders 从零到光照部分 - <a href="http://zhendongwang.com/ZdGL">在这在这</a></h2>
     <h2>WebGL告一段落,准备手写个光线追踪&&要总结梳理JS了</h2>
