update for learning

--- a/slides/index.html
+++ b/slides/index.html
@@ -58,8 +58,8 @@
             <li><a href="/slides/102">css基线</a></li>
             <li><a href="/slides/103">css镂空背景</a></li>
             <li><a href="/slides/104">JS事件总结</a></li>
-            <li><a href="/slides/105">**JS函数及原型</a></li>
-            <li><a href="/">**HTML5拖拽API</a></li>
+            <li><a href="/slides/105">JS函数及原型</a></li>
+            <li><a href="/slides/108">**HTML5拖拽API</a></li>
             <li><a href="/slides/106">JS拖拽基础</a></li>
             <li><a href="/slides/107">JS拖拽总结</a></li>
             <li><a href="/slides/110">SVG练习</a></li>
