--- a/slides/index.html
+++ b/slides/index.html
@@ -63,6 +63,8 @@
             <li><a href="/slides/106">JS拖拽基础</a></li>
             <li><a href="/slides/107">JS拖拽总结</a></li>
             <li><a href="/slides/110">SVG练习</a></li>
+            <li><a href="/slides/111">*CSS3 shape-outside</a></li>
+            <li><a href=".slides/112">*CSS3 clip-path</a></li>
             <li><a href="/slides/201">input格式校验</a></li>
         </ul>
     </div>
