--- a/slides/index.html
+++ b/slides/index.html
@@ -65,6 +65,7 @@
             <li><a href="/slides/110">SVG练习</a></li>
             <li><a href="/slides/111">*CSS3 shape-outside</a></li>
             <li><a href=".slides/112">*CSS3 clip-path</a></li>
+            <li><a href=".slides/113">MetaBall-CSS</a></li>
             <li><a href="/slides/201">input格式校验</a></li>
         </ul>
     </div>
