--- a/slides/113/index.html
+++ b/slides/113/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>metaballs-css</title>
     <style>
     	ul{
     		list-style: none;
     	}
-    	.dots{
+    	.list .dots{
 
     	  -webkit-filter: blur(5px) contrast(20);
 		  	filter: blur(5px) contrast(20);
 		  	background: white; 
     	}
-    	.dot{
+    	.list .dot{
     		display: inline-block;
 		   	background: #333;
 		  	/* weirdness happens when edges hit, also consider hiding overflow */
@@ -21,18 +22,49 @@
 		  	border-radius: 30px;
 		  	margin: 15px;
     	}
-    	.move{
-    		transition: all 1s;
+    	.list .move{
+    		transition: all 1s cubic-bezier(.83,.97,.05,1.44);
     		background: #333;
     		position: absolute;
     		padding: 40px;
     		border-radius: 40px;
     		margin: 5px;
     	}
+        .logo .dots{
+            -webkit-filter: blur(2px) contrast(10);
+            filter: blur(2px) contrast(10);
+            background: white; 
+        }
+        .logo .dot{
+            display: inline-block;
+            background: #333;
+            /* weirdness happens when edges hit, also consider hiding overflow */
+            padding: 12px;
+            border-radius: 12px;
+            margin: 6px;
+        }
+        .logo .select{
+            transition: all 1s cubic-bezier(.83,.97,.05,1.44);
+            background: #333;
+            position: absolute;
+            padding: 16px;
+            border-radius: 16px;
+            margin: 2px;
+            animation:1s  back cubic-bezier(.45,0,.55,1) infinite  alternate-reverse;
+        }
+        @keyframes back {
+            0% { 
+                transform: matrix(1,0,0,1,0,0); 
+            }
+            100% { 
+                transform: matrix(1,0,0,1,44,0);
+            }
+        }
+            
     </style>
 </head>
 <body>
-    <div>
+    <div class="list">
     	<ul class="dots">
     		<li class="move"></li>
     		<li class="dot"></li>
@@ -41,9 +73,16 @@
     		<li class="dot"></li>
     	</ul>
     </div>
+    <div class="logo">
+        <ul class="dots">
+            <li class="select"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+        </ul>
+    </div>
     <script>
-    		var move = document.querySelector('.move');
-    		var dots = document.querySelectorAll('.dot');
+    		var move = document.querySelector('list .move');
+    		var dots = document.querySelectorAll('list .dot');
     		console.log(dots)
     		dots.forEach(function(item, index){
     			item.addEventListener('mouseenter', function(e){
