--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
         html, body {
             overflow: hidden;
             margin: 0;
+            background:#333; 
+            width:100%;
+            height:100%;
         }
 
         body {
             font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
-            color: rgba(255,0,0,.6);
-            background:#eee;
+        /*    background:#eee;
             background-image:
                 linear-gradient(45deg,rgba(0,0,0,.1) 25%, transparent 0,transparent 75%, rgba(0,0,0,.1) 0),
                 linear-gradient(45deg,rgba(0,0,0,.1) 25%, transparent 0,transparent 75%, rgba(0,0,0,.1) 0);
             background-position:0 0,15px 15px;
-            background-size:30px 30px;
+            background-size:30px 30px;*/
+            position:relative;
         }
-        
+        .mask {
+            position:absolute;
+            width:100%;
+            height:100%; 
+            background-color:#333;
+            background-image:url('./image/bg.jpg');
+            background-size: cover;
+            background-repeat:no-repeat;
+            opacity:0.4;
+        } 
         .wrap {
             position: absolute;
             text-align: center;
@@ -34,15 +46,16 @@
         h1 {
             font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
             font-weight: 700;
-            font-size: 30px;
+            font-size: 48px;
             letter-spacing: 9px;
             text-transform: uppercase;
             margin: 12px 0;
+            color: rgba(255,0,0,.6);
             left: 4px;
         }
 
         h2 {
-            color: rgba(255,0,0,.8);
+            color: rgba(255,255,255,.8);
             font-weight: normal;
             font-size: 15px;
             letter-spacing: .12em;
@@ -62,19 +75,20 @@
         }
 
         a {
-            color: rgba(255,0,0,.6);
+            color: rgba(255,255,255,.8);
             text-decoration: none;
             transition: color .2s ease;
         }
 
         a:hover {
-            color: rgba(255,0,0,0.9);
+            color: rgba(255,255,255,.6);
         }
     </style>
 </head>
 <body>
+<div class="mask"></div>
 <div class="wrap">
-    <h1>ZD98</h1>
+    <h1> &lt; ZD98/&gt;</h1>
 
     <h2>Web Front-End Designer &amp; Developer</h2>
 
