--- a/slides/index.html
+++ b/slides/index.html
@@ -70,7 +70,7 @@
         </ul>
     </div>
     <h2>JS设计模式总结 - <a href="https://gist.github.com/zD98">在这在这</a></h2>
-    <h2>WebGL Shaders 从零到光照部分 - <a href="http://zhendongwang.com/ZdGL">在这在这</a></h2>
+    <h2>WebGL Shaders 从零到光照部分 - <a href="http://zd98.xyz/ZdGL">在这在这</a></h2>
     <h2>WebGL告一段落,准备手写光线追踪&amp;&amp;要总结梳理JS了</h2>
 </div>
 </body>
