feat: add blog link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             font-weight: normal;
             font-size: 15px;
             letter-spacing: .12em;
-            margin-bottom: 30px;
+            margin-bottom: 8px;
             left: 3px;
         }
 
@@ -89,22 +89,18 @@
 <div class="mask"></div>
 <div class="wrap">
     <h1> &lt; ZD98/&gt;</h1>
-
+    <h2>Zhendong Wang</h2>
     <h2>Web Front-End Designer &amp; Developer</h2>
 
     <p><a href="https://github.com/zD98/">GitHub</a></p>
 
-    <p><a href="/slides">Slides</a></p>
+    <p><a href="/slides">WebGL Slides</a></p>
+
+    <p><a href="/blog">Blog</a></p>
 
     <p><a href="/cv">CV</a></p>
 
     <p><a href="javascript:0">Email</a></p>
 </div>
-<canvas></canvas>
-
-<script>
-    var canvas = document.getElementsByName('canvas')[0];
-    var ctx = canvas.getContext('2d');
-</script>
 </body>
 </html>
